# quiz

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  PRO_IMPLEMENTATION_SUMMARY.md  Procfile  README.md  WORKING_CONFIGURATION.md  client_secret_1044148804632-ppneakp0mcl08lgk8pl23cj9hs57mhn9.apps.googleusercontent.com.json  config_example.py  deploy_to_github.bat  env.example  env_setup.py  main.py  render.yaml  requirements.txt  start_server.bat  tatus  wsgi.py
data/: questions.md
docs/: DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  GITHUB_SETUP_SUMMARY.md
non_essential/development/: pyproject.toml
non_essential/documentation/: CONTRIBUTING.md  DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  PROJECT_SUMMARY.md
non_essential/documentation/docs/: TOPICS.md
non_essential/testing/: mock_payment_service.py
non_essential/testing/tests/: __init__.py  test_repo.py
src/: __init__.py
src/core/: fast_quiz_server.py  markdown_question_repository.py
src/quiz_app/: __init__.py  config.py  models.py  routes.py
src/quiz_app/repo/: __init__.py  markdown_repository.py
src/quiz_app/services/: __init__.py  database_service.py  email_service.py  oauth_service.py  payment_service.py  pdf_service.py  quiz_service.py  scoring_service.py
templates/: base.html  contact.html  dashboard.html  history.html  homepage.html  index.html  legal.html  payment.html  pro-homepage.html  quiz-pro.html  signin.html
tests/: test_routes.py
